overflow-solved

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10393,7 +10393,8 @@ background-position: 0 0,40px 40px; */
 
 @media screen and (min-width: 769px){
   #footer-contact{
-    overflow: visible;
+    overflow-x: visible;
+    overflow-y: visible;
   }
 }
 
